Fix some colors on mobile phone

--- a/css.css
+++ b/css.css
@@ -360,7 +360,6 @@ main.hidden {
 body.sticky .sidebar,
 body.sticky .sidebar-toggle {
 	position: fixed;
-    background: #242629;
     overflow-y: scroll;
     scrollbar-color: #3e4145 #181a1c;
     scrollbar-width: thin;
@@ -537,10 +536,10 @@ body.close .content {
 		transform: translateX(300px)
 	}
 	body.close .sidebar-toggle {
-		background-color: hsla(0, 0%, 100%, .8);
+		background-color: #2c2f33;
 		transition: background-color 1s;
-		width: 284px;
-		padding: 10px
+		width: 100%;
+		padding: 10px;
 	}
 	body.close .content {
 		transform: translateX(300px)
@@ -712,6 +711,7 @@ body {
     text-transform: uppercase;
     letter-spacing: 0.021em;
     font-weight: 600;
+    background: #242629;
 }
 
 .sidebar li {
